--- a/views/admin/cetakCplCPmk.ejs
+++ b/views/admin/cetakCplCPmk.ejs
@@ -25,104 +25,64 @@
 <body>
 
   
-    <div id="container">
-  
-        <h2 class="text-center">Peta CPL Ke CPMK</h2>
-         <table class="table table-striped table-bordered table-hover mt-3">
-          <thead>
-            <tr>
-              <th class="text-center" scope="col">No</th>
-              <th class="text-center" scope="col" >CP Program Studi</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>CP-1</td>
-              <td>Mengidentifikasi, memformulasikan dan memecahkan  permasalahan kebutuhan informasi dari suatu organisasi
-              </td>
-            </tr>
-            <tr>
-              <td>CP-2</td>
-              <td> Mengintegrasikan solusi berbasis teknologi informasi secara efektif pada suatu organisasi
-              </td>
-            </tr>
-            <tr>
-              <td>CP-3</td>
-              <td>  
-                Menerapkan konsep-konsep dasar dalam merencanakan Sistem Informasi, merancang Sistem Informasi, membangun Sistem Informasi, mengoperasikan Sistem Informasi, dan mengevaluasi Sistem Informasi 
-              </td>
-            </tr>
-           
-        </tbody>
-        </table>
-      
-        
-      
-          <table class="table table-striped table-bordered table-hover">
-              <thead>
-                <tr>
-                  <th class="text-center" scope="col"></th>
-                  <th class="text-center" scope="col">Capaian Pembelajaran Mata Kuliah (CPMK)</th>
-                  <th class="text-center" scope="col">CP-1</th>
-                  <th class="text-center" scope="col">CP-2</th>
-                  <th class="text-center" scope="col">CP-3</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>Mahasiswa mampu menjelaskan konsep dasar dan komponen aplikasi berbasis web (CP-1, CP-2)</td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Mahasiswa mampu menggunakan salah satu technology stack untuk membangun aplikasi berbasis web (CP-1, CP-2)</td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>Mahasiswa mampu menggunakan pemograman asynchronous . (CP-2, CP-3)</td>
-                  <td></td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                </tr>
-                <tr>
-                  <td>4</td>
-                  <td>Mahasiswa mampu menerapkan keamanan untuk situs web . (CP-2, CP-3)</td>
-                  <td></td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                </tr>
-                <tr>
-                  <td>5</td>
-                  <td>Mahasiswa mampu menggunakan dan mendesain format data JSON. (CP-2, CP-3)</td>
-                  <td></td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                </tr>
-                <tr>
-                  <td>6</td>
-                  <td>Mahasiswa mampu deploy aplikasi web ke internet. (CP-2)</td>
-                  <td></td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>7</td>
-                  <td>Mahasiswa mampu mendemonstrasikan keterampilan bekerja sama dengan tim (CP-3)</td>
-                  <td></td>
-                  <td></td>
-                  <td><i class='bx-fw bx-sm bx bx-check'></i></td>
-                </tr>
-      
-                
+  <div id="container">
+    <h3 class="admin-title">Peta CPL ke CPMK - <%= course_plan.name %></h3>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="table-wrap">
+          <table class="table table-responsive-xl">
+            <thead>
+              <tr>
+                <th width="10%" class="text-center" scope="col">CP</th>
+                <th class="text-center" scope="col">CP Program Studi</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text-center">CP-1</td>
+                <td>Mengidentifikasi, memformulasikan dan memecahkan permasalahan kebutuhan informasi dari suatu organisasi</td>
+              </tr>
+              <tr>
+                <td class="text-center">CP-2</td>
+                <td>Mengintegrasikan solusi berbasis teknologi informasi secara efektif pada suatu organisasi</td>
+              </tr>
+              <tr>
+                <td class="text-center">CP-3</td>
+                <td>Menerapkan konsep-konsep dasar dalam merencanakan Sistem Informasi, merancang Sistem Informasi, membangun Sistem Informasi, mengoperasikan Sistem Informasi, dan mengevaluasi Sistem Informasi</td>
+              </tr>
             </tbody>
-            </table>
+          </table>
+        </div>
       </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-md-12">
+        <div class="table-wrap">
+          <table class="table table-responsive-xl">
+            <thead>
+              <tr>
+                <th width="10%" class="text-center" scope="col">CPMK</th>
+                <th width="65%" class="text-center" scope="col">Capaian Pembelajaran Mata Kuliah (CPMK)</th>
+                <th class="text-center" scope="col">CP</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% cpmkAll.forEach(item => { %>
+              <tr>
+                <td class="text-center"><%= item.code %></td>
+                <td><%= item.name %></td>
+  
+                <td class="text-center"><% item.curriculum_los.forEach(a => { %><%= a.code %>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<% }) %></td>
+              </tr>
+              <% }) %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
  <script>window.print()</script>
 
  <%- include('../partials/footer'); -%>
