--- a/views/admin/cetakListRps.ejs
+++ b/views/admin/cetakListRps.ejs
@@ -28,33 +28,40 @@
     <div class="main ">
      <h2 class="text-center">Daftar List RPS</h2>
 
+     <div class="row">
+      <div class="col-md-12">
+        <div class="table-wrap">
+          <table class="table table-responsive-xl">
+            <thead>
+              <tr>
+                <th class="text-center" scope="col">No.</th>
+                <th class="text-center" scope="col">Nama Mata Kuliah</th>
+                <th class="text-center" scope="col">Kode Mata Kuliah</th>
+                <th class="text-center" scope="col">SKS</th>
+                <th class="text-center" scope="col">Semester</th>
+                <th class="text-center" scope="col">Jumlah Revisi</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% items.forEach((item,i) => { %>
+              <tr>
+                
+                <td scope="row"><%= i+1 %></td>
+                <td class="text-center"><%= item.name %></td>
+                <td class="text-center"><%= item.code %></td>
+                <td class="text-center"><%= item.credit %></td>
+                <td class="text-center"><%= item.semester %></td>
+                <td class="text-center"><%= item.rev %></td>
+               
+              </tr>
+              <% }) %>
+              </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
  <div id="container ">
-    <table class="table table-striped table-bordered table-hover">
-        <thead>
-          <tr>
-            <th class="text-center" scope="col">No.</th>
-            <th class="text-center" scope="col">Nama Mata Kuliah</th>
-            <th class="text-center" scope="col">Kode Mata Kuliah</th>
-            <th class="text-center" scope="col">SKS</th>
-            <th class="text-center" scope="col">Semester</th>
-            <th class="text-center" scope="col">Jumlah Revisi</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% items.forEach((item,i) => { %>
-          <tr>
-            
-            <td scope="row"><%= i+1 %></td>
-            <td class="text-center"><%= item.name %></td>
-            <td class="text-center"><%= item.code %></td>
-            <td class="text-center"><%= item.credit %></td>
-            <td class="text-center"><%= item.semester %></td>
-            <td class="text-center"><%= item.rev %></td>
-           
-          </tr>
-          <% }) %>
-          </tbody>
-      </table>
+   
  </div>
  <script>window.print()</script>
 
