--- a/views/dosen/course_plan.ejs
+++ b/views/dosen/course_plan.ejs
@@ -111,7 +111,17 @@
                   <tr>
                     <td  class="hidden" ></td>
                     <td>CP-1</td>
-                    <td colspan="8">Mengidentifikasi</td>
+                    <td colspan="8">Mengidentifikasi, memformulasikan dan memecahkan permasalahan kebutuhan informasi dari suatu organisasi</td>
+                  </tr>
+                  <tr>
+                    <td  class="hidden" ></td>
+                    <td>CP-2</td>
+                    <td colspan="8">Mengintegrasikan solusi berbasis teknologi informasi secara efektif pada suatu organisasi</td>
+                  </tr>
+                  <tr>
+                    <td  class="hidden" ></td>
+                    <td>CP-3</td>
+                    <td colspan="8">Menerapkan konsep-konsep dasar dalam merencanakan Sistem Informasi, merancang Sistem Informasi, membangun Sistem Informasi, mengoperasikan Sistem Informasi, dan mengevaluasi Sistem Informasi</td>
                   </tr>
 
                   <tr>
