--- a/views/mahasiswa/course_plan.ejs
+++ b/views/mahasiswa/course_plan.ejs
@@ -14,21 +14,21 @@
     <% }) %>
 
     <div class="tampil-rps">
-      <table class="rps-tabel" >
+      <table class="rps-tabel">
         <thead>
-         <tr>
-      <th rowspan="4" , align="center"><img src="/images/logounand.png" alt="logounand" width="100px"/></th>
-      <th colspan="9" class="text-center">RENCANA PEMBELAJARAN SEMESTER (RPS)</th>
-    </tr>
-    <tr>
-      <th colspan="9" class="text-center">PROGRAM STUDI: Sistem Informasi</th>
-    </tr>
-    <tr>
-      <th colspan="9" class="text-center">FAKULTAS/PPs: Teknologi Informasi</th>
-    </tr>
-    <tr>
-      <th colspan="9" class="text-center">UNIVERSITAS ANDALAS</th>
-    </tr>
+          <tr>
+            <th rowspan="4" , align="center"><img src="/images/logounand.png" alt="logounand" width="100px" /></th>
+            <th colspan="9" class="text-center">RENCANA PEMBELAJARAN SEMESTER (RPS)</th>
+          </tr>
+          <tr>
+            <th colspan="9" class="text-center">PROGRAM STUDI: Sistem Informasi</th>
+          </tr>
+          <tr>
+            <th colspan="9" class="text-center">FAKULTAS/PPs: Teknologi Informasi</th>
+          </tr>
+          <tr>
+            <th colspan="9" class="text-center">UNIVERSITAS ANDALAS</th>
+          </tr>
         </thead>
         <tbody>
           <tr>
@@ -55,52 +55,58 @@
             <td colspan="2" class="grey">Dosen Pengembang RPS</td>
             <td colspan="2" class="grey">Koordinator Rumpun MK</td>
             <td colspan="5" class="grey">KA Program Studi</td>
-          
           </tr>
           <tr>
             <td colspan="2">
-            <% item.forEach((data) => { data.lecturers.forEach((res) => { %>
-            <%= res.name %><br>
-            <% })}) %>
+              <% item.forEach((data) => { data.lecturers.forEach((res) => { %> <%= res.name %><br />
+              <% })}) %>
             </td>
             <td colspan="2"></td>
             <td colspan="5"></td>
-            
           </tr>
 
           <tr>
             <td colspan="10" class="font-weight">Capaian Pembelajaran (CP)</td>
-            
           </tr>
           <tr>
-              <td colspan="1"></td>
-              <td colspan="9" class="grey">CP Program Studi</td>
+            <td colspan="1"></td>
+            <td colspan="9" class="grey">CP Program Studi</td>
           </tr>
           <tr>
-            <td  class="hidden" ></td>
+            <td class="hidden"></td>
             <td>CP-1</td>
-            <td colspan="8">Mengidentifikasi</td>
+            <td colspan="8">Mengidentifikasi, memformulasikan dan memecahkan permasalahan kebutuhan informasi dari suatu organisasi</td>
+          </tr>
+          <tr>
+            <td class="hidden"></td>
+            <td>CP-2</td>
+            <td colspan="8">Mengintegrasikan solusi berbasis teknologi informasi secara efektif pada suatu organisasi</td>
+          </tr>
+          <tr>
+            <td class="hidden"></td>
+            <td>CP-3</td>
+            <td colspan="8">Menerapkan konsep-konsep dasar dalam merencanakan Sistem Informasi, merancang Sistem Informasi, membangun Sistem Informasi, mengoperasikan Sistem Informasi, dan mengevaluasi Sistem Informasi</td>
           </tr>
 
           <tr>
-            <td ></td>
+            <td></td>
             <td colspan="9" class="grey">CP Mata Kuliah</td>
           </tr>
 
           <% item.forEach((data) => { data.course_los.forEach((res) => { %>
           <tr>
-            <td ></td>
+            <td></td>
             <td><%= res.code %></td>
             <td colspan="8"><%= res.name %></td>
           </tr>
           <% })}) %> <% item.forEach((item) => { %>
           <tr>
-            <td  class="font-weight">Deskripsi Singkat Mata Kuliah</td>
+            <td class="font-weight">Deskripsi Singkat Mata Kuliah</td>
             <td colspan="9"><%= item.description %></td>
           </tr>
 
           <tr>
-            <td  class="font-weight">Materi Pembelajaran/Pokok Bahasan</td>
+            <td class="font-weight">Materi Pembelajaran/Pokok Bahasan</td>
             <td colspan="9"><%= item.material %></td>
           </tr>
 
@@ -153,7 +159,7 @@
             <td colspan="9">-</td>
           </tr>
           <tr>
-            <td colspan="10"class="font-weight">Assessment</td>
+            <td colspan="10" class="font-weight">Assessment</td>
           </tr>
           <% item.forEach((data) => { data.course_plan_assessments.forEach((res) => { var no = 0 %>
           <tr>
@@ -162,22 +168,22 @@
             <% })}) %>
           </tr>
 
-        <tr>
-            <td rowspan="3" class="font-weight">Mata Kuliah Syarat </td>
-            <td>1 </td>
-            <td colspan="8">SDA </td> 
-        </tr>
-        <tr>
-            <td>2 </td>
-            <td colspan="8">DASPRO </td> 
-        </tr>
-        <tr>
-            <td>3 </td>
-            <td colspan="8">PBO </td> 
-        </tr>  
+          <tr>
+            <td rowspan="3" class="font-weight">Mata Kuliah Syarat</td>
+            <td>1</td>
+            <td colspan="8">SDA</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td colspan="8">DASPRO</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td colspan="8">PBO</td>
+          </tr>
         </tbody>
       </table>
-      
+
       <table class="rps-tabel mt-3">
         <thead>
           <tr>
@@ -215,7 +221,6 @@
         </tbody>
       </table>
     </div>
-
   </div>
 </div>
 
